[package]
name = "argent"
version = "0.1.0"
authors = ["Olivier Sarrouy <olivier.sarrouy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde_derive = "1.0.104"
serde = "1.0.104"   
rustc-hex = "2.1.0"
tokio-core = "0.1.17" 
web3 = "0.9.0"
clap = "2.33.0"
colored = "1.9"
lazy_static = "1.4.0"
ethereum-types = "0.8.0" 
prettytable-rs = "^0.8"
# ens = "0.1"
tiny-keccak = "1.4.2"
