[package]
name = "argent"
version = "0.1.0"
authors = ["Olivier Sarrouy <osarrouy@protonmail.com>"]
edition = "2018"

[dependencies]
web3 = "0.10.0"
clap = "2.33.0"
colored = "1.9"
lazy_static = "1.4.0"
ethereum-types = "0.8.0"
dialoguer = "0.5.0"
ethabi = "9.0.0"
tiny-keccak = { version = "2.0.0", features = ["sha3", "keccak"] }
hex = "0.4.0"
rustc-hex = "2.1.0" 